New FrostyBoy Sandbox/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>GST__c</fullName>
        <label>GST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <label>PG</label>
        <picklist>
            <picklistValues>
                <fullName>BEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Pack__c</fullName>
        <label>Unit Pack</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PG__c</columns>
        <filterScope>Everything</filterScope>
        <label>Products</label>
    </listViews>
</CustomObject>